[gd_scene load_steps=6 format=2]

[ext_resource path="res://etc/I-pixel-u.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/shop.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="store" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 296.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 378.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "STORE"
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 378.0
margin_bottom = 230.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minusSpd" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 39.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "-"
flat = true

[node name="speedLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 43.0
margin_top = 5.0
margin_right = 259.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
text = "SPEED"
align = 1
valign = 3

[node name="plusSpd" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_right = 302.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 3 )
text = "+"
flat = true

[node name="speedNumLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 306.0
margin_top = 5.0
margin_right = 306.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 3

[node name="minusHp" type="Button" parent="VBoxContainer/GridContainer"]
margin_top = 75.0
margin_right = 39.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 3 )
text = "-"
flat = true

[node name="hpLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 43.0
margin_top = 80.0
margin_right = 259.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "HEALTH"
align = 1
valign = 3

[node name="plusHp" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 263.0
margin_top = 75.0
margin_right = 302.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 3 )
text = "+"
flat = true

[node name="hpNumLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 306.0
margin_top = 80.0
margin_right = 306.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doneButton" type="Button" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 378.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 3 )
text = "BUY 10G"
flat = true
[connection signal="pressed" from="VBoxContainer/GridContainer/minusSpd" to="." method="_on_minusSpd_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/plusSpd" to="." method="_on_plusSpd_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/minusHp" to="." method="_on_minusHp_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/plusHp" to="." method="_on_plusHp_pressed"]
[connection signal="pressed" from="VBoxContainer/doneButton" to="." method="_on_doneButton_pressed"]
